Fix: List of versions on wayback too small. closes arquivo/pwa-technologies#946

--- a/framed/static/css/swipeCustom.css
+++ b/framed/static/css/swipeCustom.css
@@ -519,7 +519,7 @@ a#closeSpecPopUp {
     margin-top: 68px;
     border: none;
     background-color: #033f72;     
-    height: calc(100vh - 33vh);
+    height: calc(100vh - 170px);
   }
   @media screen and (max-width:960px) {
     .headerMenuText {
